# vector_search

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  download_laion_small.sh  pyproject.toml
results/hw2/: annoy_results.jsonl  hnsw_results.jsonl  ivfpq_results.jsonl  results description.md
results/hw3/: clip_default_ef_search_50_results.jsonl  clip_tuned_ef_search_50_results.jsonl  single_unnamed_ef_search_50_results.jsonl
results/hw4/: filtered_search_results.jsonl  filtered_search_results_acorn.jsonl
results/hw5/: bm25_search_results.jsonl  splade_precomputed_search_results.jsonl  splade_search_results.jsonl
src/hw1_how_to_search/: benchmarks.py  checks.py  distances_numpy.py  distances_python.py  imdb_glove_search.py  visualize.py
src/hw2_ann_exploration/: annoy_benchmark.py  ground_truth.py  hnsw_benchmark.py  ivfpq_benchmark.py  metrics.py
src/hw3_qdrant/: collection_setup.py  crud_read.py  crud_spoil.py  ground_truth.py  search.py  upload_data.py
src/hw4_payload/: collection_setup.py  create_payload_indexes.py  filtered_search_ACORN.py  filtered_search_HNSW.py  other_filters.py  upload_data.py
src/hw5_sparse/: collection_setup.py  conclusion.md  download_scifact.py  search_everything.py  search_precomputed.py  upload_data.py
